; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd.c_handle_ts_interpret_command.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd.c_handle_ts_interpret_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%.*s\00", align 1
@.str.1 = private unnamed_addr constant [65 x i8] c"interpret_command cmd_string = '%s', result to interpret = '%s'\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i32)* @handle_ts_interpret_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_ts_interpret_command(i32* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @ts_node_named_child(i32 %15, i32 0)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @ts_node_start_byte(i32 %17)
  store i32 %18, i32* %10, align 4
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @ts_node_end_byte(i32 %19)
  store i32 %20, i32* %11, align 4
  %21 = load i32, i32* %11, align 4
  %22 = load i32, i32* %10, align 4
  %23 = sub nsw i32 %21, %22
  %24 = load i8*, i8** %6, align 8
  %25 = load i32, i32* %10, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %24, i64 %26
  %28 = call i8* @r_str_newf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %23, i8* %27)
  store i8* %28, i8** %12, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = load i8*, i8** %12, align 8
  %31 = call i8* @r_core_cmd_str(i32* %29, i8* %30)
  store i8* %31, i8** %13, align 8
  %32 = load i8*, i8** %12, align 8
  %33 = load i8*, i8** %13, align 8
  %34 = call i32 @R_LOG_DEBUG(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.1, i64 0, i64 0), i8* %32, i8* %33)
  %35 = load i8*, i8** %12, align 8
  %36 = call i32 @free(i8* %35)
  %37 = load i32*, i32** %5, align 8
  %38 = load i8*, i8** %13, align 8
  %39 = load i32, i32* %8, align 4
  %40 = call i32 @core_cmd_tsr2cmd(i32* %37, i8* %38, i32 %39)
  store i32 %40, i32* %14, align 4
  %41 = load i8*, i8** %13, align 8
  %42 = call i32 @free(i8* %41)
  %43 = load i32, i32* %14, align 4
  ret i32 %43
}

declare dso_local i32 @ts_node_named_child(i32, i32) #1

declare dso_local i32 @ts_node_start_byte(i32) #1

declare dso_local i32 @ts_node_end_byte(i32) #1

declare dso_local i8* @r_str_newf(i8*, i32, i8*) #1

declare dso_local i8* @r_core_cmd_str(i32*, i8*) #1

declare dso_local i32 @R_LOG_DEBUG(i8*, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @core_cmd_tsr2cmd(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
